README, remove commented code, GeoServer url

--- a/Pastures/Pastures.csproj
+++ b/Pastures/Pastures.csproj
@@ -47,7 +47,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
@@ -619,6 +618,7 @@
     <Content Include="Images\Maps\zemfondpol.jpg" />
     <Content Include="Images\Maps\zemfondpol150.jpg" />
     <Content Include="Images\Maps\zemfondpol96.jpg" />
+    <Content Include="README.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Images\About\image057.wmz" />
