--- a/Pastures/Pastures.csproj
+++ b/Pastures/Pastures.csproj
@@ -624,6 +624,7 @@
     <Content Include="Images\About\image063.wmz" />
     <Content Include="Pdf\Manual.pdf" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
