--- a/Pastures/Web.config
+++ b/Pastures/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NpgsqlContext" connectionString="Server=92.46.36.100;User Id=remote;Password=remote;Port=5432;Database=Pastures;" providerName="Npgsql" />
+    <add name="NpgsqlContext" connectionString="Server=localhost;User Id=postgres;Password=postgres;Port=5432;Database=Pastures;" providerName="Npgsql" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
